{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 26,
  "lineage": "47a456cf-a563-5a49-1f0f-d2e2a2e8a5a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-custom-private-compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:307709542904:instance/i-0dc5e205cc2664ef5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc5e205cc2664ef5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "semperis-exercise-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008e096b27b5d3fd5",
            "private_dns": "ip-10-0-4-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04599bea2d4913a51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064dbc26a112f7b1e",
            "tags": {
              "Name": "ec2-custom-private-compute",
              "description": "the ec2 in private subnet"
            },
            "tags_all": {
              "Name": "ec2-custom-private-compute",
              "description": "the ec2 in private subnet"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c85a2d095d38d8"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_custom_private",
            "aws_subnet.private_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_custom_public_compute_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:307709542904:instance/i-0f7228c81c1a52f20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7228c81c1a52f20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "semperis-exercise-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e7878e957b8c6a0f",
            "private_dns": "ip-10-0-2-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.162",
            "public_dns": "ec2-75-101-208-133.compute-1.amazonaws.com",
            "public_ip": "75.101.208.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044fc711456e6c073",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08593722d03350b7c",
            "tags": {
              "Name": "ec2_custom_public_compute_a",
              "description": "the ec2 instance that will be created for purposes of control plan fon k8 constallation"
            },
            "tags_all": {
              "Name": "ec2_custom_public_compute_a",
              "description": "the ec2 instance that will be created for purposes of control plan fon k8 constallation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8feaf0f8adc378a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_custom_public",
            "aws_subnet.public_subnet_a",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_custom_public_compute_e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:307709542904:instance/i-0a6c9df99f4f6e048",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6c9df99f4f6e048",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "semperis-exercise-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c2b3b2979c13439",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-52-86-174-112.compute-1.amazonaws.com",
            "public_ip": "52.86.174.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b07f6ed6d35601a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0042091cc0fe62051",
            "tags": {
              "Name": "ec2_custom_public_compute_e",
              "description": "the ec2 instance that will be created for purposes of control plan fon k8 constallation"
            },
            "tags_all": {
              "Name": "ec2_custom_public_compute_e",
              "description": "the ec2 instance that will be created for purposes of control plan fon k8 constallation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8feaf0f8adc378a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_custom_public",
            "aws_subnet.public_subnet_e",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:internet-gateway/igw-05d590c75c64eba84",
            "id": "igw-05d590c75c64eba84",
            "owner_id": "307709542904",
            "tags": {
              "Description": "internet gateway custom ",
              "Name": "ig_custom "
            },
            "tags_all": {
              "Description": "internet gateway custom ",
              "Name": "ig_custom "
            },
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "custom_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307709542904:loadbalancer/app/custom-lb/5569a1336653459d",
            "arn_suffix": "app/custom-lb/5569a1336653459d",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "custom-lb-1956740529.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:307709542904:loadbalancer/app/custom-lb/5569a1336653459d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "custom-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e8feaf0f8adc378a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0042091cc0fe62051"
              },
              {
                "subnet_id": "subnet-08593722d03350b7c"
              }
            ],
            "subnets": [
              "subnet-0042091cc0fe62051",
              "subnet-08593722d03350b7c"
            ],
            "tags": {
              "Name": "my-lb"
            },
            "tags_all": {
              "Name": "my-lb"
            },
            "vpc_id": "vpc-0ffba7644a133027c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_custom_public",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_e",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "custom_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307709542904:listener/app/custom-lb/5569a1336653459d/6c1596e265e6bf29",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:307709542904:targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:307709542904:listener/app/custom-lb/5569a1336653459d/6c1596e265e6bf29",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:307709542904:loadbalancer/app/custom-lb/5569a1336653459d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.custom_lb",
            "aws_lb_target_group.custom_lb_target_group",
            "aws_security_group.sg_custom_public",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_e",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "custom_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307709542904:targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd",
            "arn_suffix": "targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:307709542904:targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:307709542904:loadbalancer/app/custom-lb/5569a1336653459d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "custom-loadbalance-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "custom_lb_target_group_attachement_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:307709542904:targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd-20240325190516449300000002",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:307709542904:targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd",
            "target_id": "i-0f7228c81c1a52f20"
          },
          "dependencies": [
            "aws_instance.ec2_custom_public_compute_a",
            "aws_lb_target_group.custom_lb_target_group",
            "aws_security_group.sg_custom_public",
            "aws_subnet.public_subnet_a",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "custom_lb_target_group_attachement_e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:307709542904:targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd-20240325190516389400000001",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:307709542904:targetgroup/custom-loadbalance-target-group/0dd8f1cc444ecfdd",
            "target_id": "i-0a6c9df99f4f6e048"
          },
          "dependencies": [
            "aws_instance.ec2_custom_public_compute_e",
            "aws_lb_target_group.custom_lb_target_group",
            "aws_security_group.sg_custom_public",
            "aws_subnet.public_subnet_e",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_rout_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:route-table/rtb-0835c698531407052",
            "id": "rtb-0835c698531407052",
            "owner_id": "307709542904",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d590c75c64eba84",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "route table - to control all of the internet incoming - 1 level of control over the incoming  ",
              "Name": "rt_custom_internet"
            },
            "tags_all": {
              "Description": "route table - to control all of the internet incoming - 1 level of control over the incoming  ",
              "Name": "rt_custom_internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_custom",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rout_custom_association_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2ceddf2a7500611",
            "route_table_id": "rtb-0835c698531407052",
            "subnet_id": "subnet-0042091cc0fe62051"
          },
          "dependencies": [
            "aws_internet_gateway.ig_custom",
            "aws_route_table.custom_rout_table",
            "aws_subnet.public_subnet_e",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rout_custom_association_subnet_e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec5b8f81f035b516",
            "route_table_id": "rtb-0835c698531407052",
            "subnet_id": "subnet-08593722d03350b7c"
          },
          "dependencies": [
            "aws_internet_gateway.ig_custom",
            "aws_route_table.custom_rout_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_custom_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:security-group/sg-0a5c85a2d095d38d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5c85a2d095d38d8",
            "ingress": [],
            "name": "terraform-20240325183052518000000001",
            "name_prefix": "terraform-",
            "owner_id": "307709542904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "custom security private group",
              "Name": "sg_custom_private"
            },
            "tags_all": {
              "Description": "custom security private group",
              "Name": "sg_custom_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_custom_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:security-group/sg-0e8feaf0f8adc378a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8feaf0f8adc378a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240325183052524700000002",
            "name_prefix": "terraform-",
            "owner_id": "307709542904",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "custom security public group",
              "Name": "sg_custom_public"
            },
            "tags_all": {
              "Description": "custom security public group",
              "Name": "sg_custom_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:subnet/subnet-064dbc26a112f7b1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064dbc26a112f7b1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307709542904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private sbnet-10.0.4.0 - us-east-1d"
            },
            "tags_all": {
              "Name": "private sbnet-10.0.4.0 - us-east-1d"
            },
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:subnet/subnet-08593722d03350b7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08593722d03350b7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307709542904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public sbnet-10.0.2.0 - us-east-1a"
            },
            "tags_all": {
              "Name": "public sbnet-10.0.2.0 - us-east-1a"
            },
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:subnet/subnet-0042091cc0fe62051",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0042091cc0fe62051",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307709542904",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public sbnet-10.0.3.0 - us-east-1e"
            },
            "tags_all": {
              "Name": "public sbnet-10.0.3.0 - us-east-1e"
            },
            "vpc_id": "vpc-0ffba7644a133027c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307709542904:vpc/vpc-0ffba7644a133027c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05be4118c40592ab3",
            "default_route_table_id": "rtb-01764789fd17730ee",
            "default_security_group_id": "sg-08714e8cc07b85218",
            "dhcp_options_id": "dopt-0c9ca6fc78ba14ddb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ffba7644a133027c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01764789fd17730ee",
            "owner_id": "307709542904",
            "tags": {
              "Name": "custom_vpc"
            },
            "tags_all": {
              "Name": "custom_vpc"
            }
          }
        }
      ]
    }
  ]
}